# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_sops_encrypted.py
tests/: check_sops_encrypted_test.py
