[metadata]
name = pre_commit_hooks
version = 1.0.0
description =  This project is an extension of the github.com/pre-commit/pre-commit-hooks project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chiehting/pre-commit-hooks
author = Chiehting
author_email = ting911111@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options.entry_points]
console_scripts =
    check-sops-encrypted = pre_commit_hooks.check_sops_encrypted:main
